--- a/json-token-stream.cabal
+++ b/json-token-stream.cabal
@@ -25,6 +25,7 @@ library
   build-depends:       base           >=4.8         && <4.9
                      , bytestring     >=0.10.6      && <0.11
                      , scientific     >=0.3.4.6     && <0.4
+                     , tagged         >=0.8.3       && <0.9
                      , text           >=1.2.2.1     && <1.3
   hs-source-dirs:      src
   default-language:    Haskell2010
